# about-wasm

starter/: Cargo.toml
starter/host/: Cargo.toml
starter/host/src/: main.rs
starter/wasm/: Cargo.toml  wasi_snapshot_preview1.wasm
starter/wasm/src/: lib.rs
starter/wit/: host.wit
