[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
wasmedge-bindgen = "0.4.1"
wasmedge-bindgen-macro = "0.4.1"
wit-bindgen = "0.5.0"
